--- a/Titanic(MLR)/Kaggle_Titanic.ipynb
+++ b/Titanic(MLR)/Kaggle_Titanic.ipynb
@@ -1,1 +1,214 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6feaf4e3",
+   "metadata": {
+    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
+    "execution": {
+     "iopub.execute_input": "2023-06-03T04:33:21.244509Z",
+     "iopub.status.busy": "2023-06-03T04:33:21.244114Z",
+     "iopub.status.idle": "2023-06-03T04:33:22.913157Z",
+     "shell.execute_reply": "2023-06-03T04:33:22.911335Z"
+    },
+    "papermill": {
+     "duration": 1.675313,
+     "end_time": "2023-06-03T04:33:22.915701",
+     "exception": false,
+     "start_time": "2023-06-03T04:33:21.240388",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/kaggle/input/titanic/train.csv\n",
+      "/kaggle/input/titanic/test.csv\n",
+      "/kaggle/input/titanic/gender_submission.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
+    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
+    "# For example, here's several helpful packages to load\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from scipy import stats\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "%matplotlib inline\n",
+    "# data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "# Input data files are available in the read-only \"../input/\" directory\n",
+    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
+    "\n",
+    "import os\n",
+    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
+    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "71bce168",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-03T04:33:22.920541Z",
+     "iopub.status.busy": "2023-06-03T04:33:22.920174Z",
+     "iopub.status.idle": "2023-06-03T04:33:23.025806Z",
+     "shell.execute_reply": "2023-06-03T04:33:23.025007Z"
+    },
+    "papermill": {
+     "duration": 0.110406,
+     "end_time": "2023-06-03T04:33:23.028037",
+     "exception": false,
+     "start_time": "2023-06-03T04:33:22.917631",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.0430622009569378\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train = pd.read_csv('../input/titanic/train.csv')\n",
+    "X_valid = pd.read_csv('../input/titanic/test.csv')\n",
+    "yval = pd.read_csv('../input/titanic/gender_submission.csv')\n",
+    "y_valid = yval.Survived\n",
+    "\n",
+    "y = df_train.Survived\n",
+    "x = df_train.drop(['Survived'], axis=1)\n",
+    "categorical_cols = [cname for cname in x.columns if x[cname].nunique() < 10 and \n",
+    "                        x[cname].dtype == \"object\"]\n",
+    "\n",
+    "# Select numerical columns\n",
+    "numerical_cols = [cname for cname in x.columns if x[cname].dtype in ['int64', 'float64']]\n",
+    "\n",
+    "my_cols = categorical_cols + numerical_cols\n",
+    "X_train = x[my_cols].copy()\n",
+    "X_train.head()\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='constant')),\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "numerical_transformer = SimpleImputer(strategy='constant')\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numerical_transformer, numerical_cols),\n",
+    "        ('cat', categorical_transformer, categorical_cols)\n",
+    "    ])\n",
+    "model = LogisticRegression()\n",
+    "my_pipeline = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                              ('model', model)\n",
+    "                             ])\n",
+    "my_pipeline.fit(X_train,y)\n",
+    "\n",
+    "# Preprocessing of validation data, get predictions\n",
+    "preds = my_pipeline.predict(X_valid)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "score = mean_absolute_error(y_valid,preds)\n",
+    "print('MAE:', score)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ad077006",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-03T04:33:23.035462Z",
+     "iopub.status.busy": "2023-06-03T04:33:23.033961Z",
+     "iopub.status.idle": "2023-06-03T04:33:23.049602Z",
+     "shell.execute_reply": "2023-06-03T04:33:23.048846Z"
+    },
+    "papermill": {
+     "duration": 0.021382,
+     "end_time": "2023-06-03T04:33:23.051684",
+     "exception": false,
+     "start_time": "2023-06-03T04:33:23.030302",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your submission was successfully saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = pd.DataFrame({'PassengerId': X_valid.PassengerId, 'Survived': preds})\n",
+    "output.to_csv('submission.csv', index=False)\n",
+    "print(\"Your submission was successfully saved!\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 10.952362,
+   "end_time": "2023-06-03T04:33:23.873605",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "__notebook__.ipynb",
+   "output_path": "__notebook__.ipynb",
+   "parameters": {},
+   "start_time": "2023-06-03T04:33:12.921243",
+   "version": "2.4.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
